# secret-store

./: .gitignore  Cargo.toml  README.md
blockchain-service/: Cargo.toml
blockchain-service/src/: lib.rs
ethereum-service/: Cargo.toml
ethereum-service/src/: document_key_shadow_retrieval.rs  document_key_store.rs  lib.rs  server_key_generation.rs  server_key_retrieval.rs  services.rs  transaction_pool.rs
http-service/: Cargo.toml
http-service/src/: lib.rs  parse.rs
key-server/: Cargo.toml
key-server/src/: acl_storage.rs  blockchain.rs  integration_test.rs  key_server.rs  key_server_set.rs  key_storage.rs  lib.rs  node_key_pair.rs  serialization.rs  traits.rs
key-server/src/db_key_storage/: mod.rs
key-server/src/key_server_cluster/: cluster.rs  cluster_connections.rs  cluster_connections_net.rs  cluster_message_processor.rs  cluster_sessions.rs  cluster_sessions_creator.rs  connection_trigger.rs  connection_trigger_with_migration.rs  math.rs  message.rs  mod.rs
key-server/src/key_server_cluster/admin_sessions/: key_version_negotiation_session.rs  mod.rs  servers_set_change_session.rs  sessions_queue.rs  share_add_session.rs  share_change_session.rs
key-server/src/key_server_cluster/client_sessions/: decryption_session.rs  encryption_session.rs  generation_session.rs  random_point_generation_session.rs  signing_session_ecdsa.rs  signing_session_schnorr.rs
key-server/src/key_server_cluster/io/: deadline.rs  handshake.rs  message.rs  mod.rs  read_header.rs  read_message.rs  read_payload.rs  shared_tcp_stream.rs  write_message.rs
key-server/src/key_server_cluster/jobs/: consensus_session.rs  decryption_job.rs  dummy_job.rs  job_session.rs  key_access_job.rs  servers_set_change_access_job.rs  signing_job_ecdsa.rs  signing_job_schnorr.rs  unknown_sessions_job.rs
key-server/src/key_server_cluster/net/: accept_connection.rs  connect.rs  connection.rs  mod.rs
key-server/src/listener/: http_listener.rs  mod.rs  service_contract.rs  service_contract_aggregate.rs  service_contract_listener.rs
key-server/src/network/: mod.rs
key-server/src/network/in_memory/: mod.rs
key-server/src/network/tcp/: accept_connection.rs  connect.rs  mod.rs
key-server/src/types/: all.rs  error.rs
primitives/: Cargo.toml
primitives/src/: acl_storage.rs  error.rs  executor.rs  key_server.rs  key_server_key_pair.rs  key_server_set.rs  key_storage.rs  lib.rs  requester.rs  serialization.rs  service.rs
src/: acl_storage.rs  blockchain.rs  key_server.rs  key_server_set.rs  key_storage.rs  lib.rs  migration.rs  node_key_pair.rs  serialization.rs  traits.rs
src/key_server_cluster/: cluster.rs  cluster_connections.rs  cluster_connections_net.rs  cluster_message_processor.rs  cluster_sessions.rs  cluster_sessions_creator.rs  connection_trigger.rs  connection_trigger_with_migration.rs  math.rs  message.rs  mod.rs
src/key_server_cluster/admin_sessions/: key_version_negotiation_session.rs  mod.rs  servers_set_change_session.rs  sessions_queue.rs  share_add_session.rs  share_change_session.rs
src/key_server_cluster/client_sessions/: decryption_session.rs  encryption_session.rs  generation_session.rs  mod.rs  random_point_generation_session.rs  signing_session_ecdsa.rs  signing_session_schnorr.rs
src/key_server_cluster/io/: deadline.rs  handshake.rs  message.rs  mod.rs  read_header.rs  read_message.rs  read_payload.rs  shared_tcp_stream.rs  write_message.rs
src/key_server_cluster/jobs/: consensus_session.rs  decryption_job.rs  dummy_job.rs  job_session.rs  key_access_job.rs  mod.rs  servers_set_change_access_job.rs  signing_job_ecdsa.rs  signing_job_schnorr.rs  unknown_sessions_job.rs
src/key_server_cluster/net/: accept_connection.rs  connect.rs  connection.rs  mod.rs
src/listener/: http_listener.rs  mod.rs  service_contract.rs  service_contract_aggregate.rs  service_contract_listener.rs  tasks_queue.rs
src/types/: all.rs  error.rs  mod.rs
substrate-runtime/module/: Cargo.toml
substrate-runtime/module/src/: blockchain_storage.rs  document_key_shadow_retrieval.rs  document_key_store.rs  entity_id_storage.rs  key_server_set.rs  key_server_set_storage.rs  lib.rs  server_key_generation.rs  server_key_retrieval.rs  service.rs
substrate-runtime/primitives/: Cargo.toml
substrate-runtime/runtime/: Cargo.toml  build.rs
substrate-runtime/runtime/src/: document_key_shadow_retrieval.rs  document_key_store.rs  entity_id_storage.rs  key_server_set.rs  key_server_set_storage.rs  lib.rs  mock.rs  server_key_generation.rs  server_key_retrieval.rs  service.rs
substrate-service/: Cargo.toml
substrate-service/src/: lib.rs  transaction_pool.rs
