[package]
name = "parity-secretstore-ethereum-service"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
link = { package = "parity-secretstore-ethereum-service", git = "https://github.com/svyatonik/secretstore-ethereum-service.git" }