[package]
description = "Parity Secret Store Key Server"
name = "parity-secretstore-key-server"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
ethereum-types = "0.8.0"
futures = "0.1"
futures03 = { package = "futures", version = "0.3", features = ["compat", "thread-pool"] }
keccak-hash = "0.4.0"
lazy_static = "1.0"
libsecp256k1 = { version = "0.3.5", default-features = false }
log = "0.4"
parity-crypto = { version = "0.5.0", features = ["publickey"] }
parking_lot = "0.10.0"
serde = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4"
tokio = "0.1.22"
tokio-io = "0.1"
primitives = { package = "parity-secretstore-primitives", path = "../primitives" }

[dev-dependencies]
env_logger = "0.5"
