[package]
name = "parity-secretstore-primitives"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ethereum-types = "0.8"
futures = "0.3"
parity-bytes = "0.1"
parity-crypto = { version = "0.5", features = ["publickey"] }
parking_lot = "0.10"
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio-compat = { version = "0.1", features = ["rt-full"] }

[dev-dependencies]
serde_json = "1.0"

[features]
test-helpers = []