[package]
name = "parity-secretstore-substrate-runtime-module"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
frame-support = { version = "2.0.0-alpha.3", default-features = false }
frame-system = { version = "2.0.0-alpha.3", default-features = false }
pallet-balances = { version = "2.0.0-alpha.3", default-features = false }
primitives = { package = "parity-secretstore-substrate-runtime-primitives", path = "../primitives", default-features = false }
serde = { version = "1.0", optional = true }
sp-core = { version = "2.0.0-alpha.3", default-features = false }
sp-io = { version = "2.0.0-alpha.3", default-features = false }
sp-runtime = { version = "2.0.0-alpha.3", default-features = false }
sp-std = { version = "2.0.0-alpha.3", default-features = false }

[dev-dependencies]
parity-crypto = { version = "0.5", features = ["publickey"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"primitives/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]