[package]
name = "parity-secretstore-substrate-runtime-primitives"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-api = { version = "2.0.0-alpha.5", default-features = false }
sp-core = { version = "2.0.0-alpha.5", default-features = false }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
