[package]
name = "parity-secretstore-substrate-runtime-module"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
ss-runtime-primitives = { package = "parity-secretstore-substrate-runtime-primitives", path = "../primitives", default-features = false }

[dev-dependencies]
parity-crypto = { version = "0.5", features = ["publickey"] }

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "frame-support"

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "frame-system"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "sp-core"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "sp-io"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "sp-std"

[dev-dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "pallet-balances"

[dev-dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "40b1e530870cd5c1803fdd39b6386dcaa6a770fb"
package = "sp-runtime"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"ss-runtime-primitives/std",
]